--- a/app/src/main/res/layout/activity_vs.xml
+++ b/app/src/main/res/layout/activity_vs.xml
@@ -36,12 +36,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="82dp"
         android:layout_marginRight="82dp"
-        android:layout_marginBottom="549dp"
+        android:layout_marginBottom="546dp"
         android:text="Time left:"
         android:textColor="@color/black"
         android:textSize="35sp"
@@ -49,21 +49,21 @@
 
     <TextView
         android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="221dp"
+        android:layout_width="301dp"
+        android:layout_height="261dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="150dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="171dp"
-        android:layout_marginEnd="146dp"
-        android:layout_marginRight="146dp"
-        android:layout_marginBottom="211dp"
-        android:text="3"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="153dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginRight="61dp"
+        android:layout_marginBottom="189dp"
+        android:text="  3"
         android:textColor="@color/black"
         android:textSize="200sp"
         android:textStyle="bold" />
