--- a/app/src/main/res/layout/activity_place1.xml
+++ b/app/src/main/res/layout/activity_place1.xml
@@ -116,17 +116,18 @@
 
     <TextView
         android:id="@+id/textView_showtime"
-        android:layout_width="51dp"
-        android:layout_height="57dp"
+        android:layout_width="74dp"
+        android:layout_height="60dp"
         android:text="00"
         android:textColor="@color/black"
         android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.276" />
+        app:layout_constraintVertical_bias="0.279" />
 
     <TextView
         android:id="@+id/fif_info6"
