--- a/app/src/main/res/layout/activity_vs2.xml
+++ b/app/src/main/res/layout/activity_vs2.xml
@@ -49,20 +49,20 @@
 
     <TextView
         android:id="@+id/textView218"
-        android:layout_width="293dp"
-        android:layout_height="291dp"
+        android:layout_width="wrap_content"
+        android:layout_height="292dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginRight="71dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="154dp"
+        android:layout_marginEnd="73dp"
+        android:layout_marginRight="73dp"
+        android:layout_marginBottom="157dp"
         android:text="  3"
         android:textColor="@color/black"
         android:textSize="200sp"
